media-stack/qbittorrent+gluetun/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent-vpn
  namespace: media-stack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent-vpn
  template:
    metadata:
      labels:
        app: qbittorrent-vpn
    spec:
      containers:
        - name: qbittorrent
          image: lscr.io/linuxserver/qbittorrent:latest
          ports:
            - containerPort: 8112
              name: webui
              protocol: TCP
            - containerPort: 6881
              name: bittorrent
              protocol: UDP
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /media_drive

          
        - name: gluetun
          image: qmcgaw/gluetun
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /media_drive
          # lifecycle:
          #   postStart:
          #     exec:
          #       command:
          #         - "/bin/sh"
          #         - "-c"
          #         - |
          #             # iptables rule to ensure WebUI (port 8112) doesn't go through VPN
          #             iptables -t mangle -A PREROUTING -p tcp --dport 8112 -j ACCEPT
          #             # iptables rule to route torrent traffic (6881/udp) through VPN
          #             iptables -t mangle -A PREROUTING -p udp --dport 6881 -j MARK --set-mark 1
          volumeMounts:
            - name: gluetun-port
              mountPath: /tmp/gluetun
              
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: qbittorrent-config-pvc
        - name: downloads
          persistentVolumeClaim:
            claimName: qbittorrent-samba-pvc
        - name: gluetun-port
          persistentVolumeClaim:
            claimName: gluetun-samba-pvc
